# C317-transcribe-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/routes/: transcription.py  websocket.py
app/services/: transcription_service.py  websocket_manager.py
app/static/: index.html
app/utils/: audio_converters.py  file_handlers.py
src/: main.py
src/core/: config.py
src/models/: schemas.py
src/routes/: transcription.py  websocket.py
src/services/: transcription_service.py  websocket_manager.py
src/static/js/: recorder.js
tests/: client_test.py  conftest.py  test_api.py  test_transcription_routes.py  test_websocket_client.py  test_websocket_real_audio.py  test_websocket_routes.py
