[project]
name = "c317-whisper-api"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.3",
    "faster-whisper>=1.2.1",
    "numpy>=2.3.5",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
client = [
    "pyaudio>=0.2.14",
    "websockets>=15.0.1",
]

